# cyrillic-htr

./: .gitignore  .pre-commit-config.yaml  README.md  models.dvc  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml
configs/dvc/: default.yaml
configs/export/: onnx.yaml
configs/infer/: default.yaml
configs/logger/: mlflow.yaml
configs/model/: crnn_ctc.yaml  transformer_htr.yaml
configs/serving/: mlflow.yaml
configs/train/: colab.yaml  colab_transformer.yaml  local.yaml
data/: .gitignore  models.dvc  processed.dvc  synthetic_pretrain.dvc
data/raw/: cyrillic-handwriting-dataset.dvc
notebooks/colab/: train_colab.ipynb  transformer_htr_training.ipynb
reports/metrics/: .gitignore  baseline_test_metrics.json.dvc  test_metrics.json  test_metrics.json.dvc  transformer_htr_test_metrics.json.dvc
reports/predictions/: .gitignore  baseline_test_predictions.tsv.dvc  test_predictions.tsv  test_predictions.tsv.dvc  transformer_htr_test_predictions.tsv.dvc
scripts/: build_mlflow_model.py  download_data.py  evaluate.py  export_onnx.py  plot_metrics.py  predict.py  prepare_splits.py  preprocess_data.py  request_mlflow_server.py  train.py
src/cyrillic_htr/: __init__.py  config.py
tests/: test_collate.py  test_config.py  test_crnn_ctc.py  test_crnn_lightning_module.py  test_ctc_decoder.py  test_datamodule.py  test_dataset.py  test_device.py  test_hydra_config.py  test_image_transforms.py  test_import.py  test_prediction_helpers.py  test_text_metrics.py  test_training_plots.py  test_vocab.py  test_vocab_headerless_tsv.py
(+26 files in other folders)
