[project]
name = "cyrillic-htr"
version = "0.1.0"
description = "Handwritten text recognition for Cyrillic text images"
readme = "README.md"
authors = [
    { name = "Elizaveta Smagina", email = "smagina.shame@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "dvc>=3.67.1",
    "editdistance>=0.8.1",
    "fastapi>=0.136.1",
    "hydra-core>=1.3.2",
    "jiwer>=4.0.0",
    "kaggle>=2.1.2",
    "lightning>=2.6.1",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.47.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
